[metadata]
name = plover_startup_py
version = 0.0.2
author = user202729
description = Quick and dirty plugin to run something when Plover starts.
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/user202729/plover-startup-py
classifiers =
    Environment :: Plugins
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev8
packages =
    plover_startup_py

[options.entry_points]
plover.extension =
    plover_startup_py = plover_startup_py:Main
plover.command:
	plover_startup_py_reload = plover_startup_py:reload
